layout 수정 - 프로필

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FireTalk</string>
     <string name="app_id">1065622218584</string>
+    <string name="todo">TODO</string>
 </resources>
